Proper implementation of ProcessInstanceGroupController for federation
